Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -136,7 +136,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyPH94Xz0AZHV/J2+imsrGTi",
+      "authorship_tag": "ABX9TyNIjI9ehUdUpPP4V5BAD4Mj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8104,24 +8104,18 @@
       "source": [
         "a, b = input().split()\n",
         "\n",
-        "t = 0\n",
-        "for i in b:\n",
-        "    if i == 0:\n",
-        "        continue\n",
-        "    x = 0\n",
-        "    for j in a:\n",
-        "        x += int(j)\n",
-        "    t += x * int(i)\n",
-        "print(t)"
+        "a = '+'.join(a)\n",
+        "b = '+'.join(b)\n",
+        "print(eval('(' + a + ')*(' + b +')'))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6xrW1gtgbnRp",
-        "outputId": "daf6e0c6-acbd-42b9-d5d9-a3e674cb40c7"
+        "outputId": "7a341382-83d3-49e2-fd35-7dd4bb1c56a6"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8139,19 +8133,57 @@
         "id": "vzceFGcDmtrw"
       },
       "source": [
-        "#### "
+        "####  1308번"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "a = list(map(int, input().split()))\n",
+        "b = list(map(int, input().split()))\n",
+        "#윤년 2/29일 추가로 366일\n",
+        "# 각 월별 마지막 날 31 28/29 31 30 31 30 31 31 30 31 30 31\n",
+        "x = [[31,28,31,30,31,30,31,31,30,31,30,31,0],\n",
+        "     [31,29,31,30,31,30,31,31,30,31,30,31,0]]\n",
+        "\n",
+        "if a[0] % 4 == 0 and (a[0] % 100 != 0 or a[0] % 400 == 0):\n",
+        "    a_res = (a[0]-1) * 365 + (((a[0]-1) // 4) + ((a[0]-1) // 400) - ((a[0]-1) // 100)) + sum(x[1][:a[1]-1])+ a[2]\n",
+        "else:\n",
+        "    a_res = (a[0]-1) * 365 + (((a[0]-1) // 4) + ((a[0]-1) // 400) - ((a[0]-1) // 100)) + sum(x[0][:a[1]-1])+ a[2]\n",
+        "\n",
+        "\n",
+        "if b[0] % 4 == 0 and (b[0] % 100 != 0 or b[0] % 400 == 0):\n",
+        "    b_res = (b[0]-1) * 365 + (((b[0]-1) // 4) + ((b[0]-1) // 400) - ((b[0]-1) // 100)) + sum(x[1][:b[1]-1])+ b[2]\n",
+        "else:\n",
+        "    b_res = (b[0]-1) * 365 + (((b[0]-1) // 4) + ((b[0]-1) // 400) - ((b[0]-1) // 100)) + sum(x[0][:b[1]-1])+ b[2]\n",
+        "\n",
+        "t = b_res - a_res\n",
+        "#print(b_res, a_res)\n",
+        "if a[0] + 1000 <= b[0] and a[1] <= b[1] and a[2] <= b[2]:\n",
+        "    print('gg')\n",
+        "else:\n",
+        "    print('D-{0}'.format(t))"
       ],
       "metadata": {
-        "id": "lXfdrFFrmtr1"
+        "id": "lXfdrFFrmtr1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f86af2eb-0849-43aa-a485-dbc9919aae5b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2008 1 1\n",
+            "3008 1 1\n",
+            "1098284 733042\n",
+            "gg\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -8205,13 +8237,29 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "a = [2008]\n",
+        "a[0] % 4 == 0 and a[0] % 400 == 0 and a[0] % 100 != 0"
       ],
       "metadata": {
-        "id": "Muuu4BgrmwLj"
+        "id": "Muuu4BgrmwLj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e054e93c-a1f3-409c-fedc-3a5edff197f4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
