Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -136,7 +136,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyNIjI9ehUdUpPP4V5BAD4Mj",
+      "authorship_tag": "ABX9TyOk/T+M0NTBzqiEVneXi+9u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8165,25 +8165,10 @@
         "    print('D-{0}'.format(t))"
       ],
       "metadata": {
-        "id": "lXfdrFFrmtr1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f86af2eb-0849-43aa-a485-dbc9919aae5b"
+        "id": "lXfdrFFrmtr1"
       },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2008 1 1\n",
-            "3008 1 1\n",
-            "1098284 733042\n",
-            "gg\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8191,19 +8176,49 @@
         "id": "0NWgir__mwGD"
       },
       "source": [
-        "#### "
+        "####  1333번"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "n, l, d = map(int, input().split())\n",
+        "\n",
+        "t = 0\n",
+        "r = 0\n",
+        "c = True\n",
+        "for i in range(n):\n",
+        "    \n",
+        "    t += d\n",
+        "    while r <= t:\n",
+        "        r += l\n",
+        "        if r <= t and t < r + 5:\n",
+        "            print(t)\n",
+        "            c = False\n",
+        "            break\n",
+        "        r += 5\n",
+        "        \n",
+        "    if not c:\n",
+        "        break\n",
+        "    t += 1"
       ],
       "metadata": {
-        "id": "VwTaSQW5mwGD"
+        "id": "VwTaSQW5mwGD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0c0caef9-c461-4762-fd06-b905bd6d177a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2 5 10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -8247,7 +8262,7 @@
         },
         "outputId": "e054e93c-a1f3-409c-fedc-3a5edff197f4"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
