--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -136,7 +136,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyOk/T+M0NTBzqiEVneXi+9u",
+      "authorship_tag": "ABX9TyNYNq3OGibJ7Cs/JDs0/xgt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8184,38 +8184,34 @@
       "source": [
         "n, l, d = map(int, input().split())\n",
         "\n",
-        "t = 0\n",
-        "r = 0\n",
-        "c = True\n",
-        "for i in range(n):\n",
+        "t = [True] * 5000\n",
+        "x = 0\n",
+        "for _ in range(n):\n",
+        "    t[x:x+l] = [False] * l # 노래가 나오는 타임\n",
+        "    x += l + 5\n",
         "    \n",
-        "    t += d\n",
-        "    while r <= t:\n",
-        "        r += l\n",
-        "        if r <= t and t < r + 5:\n",
-        "            print(t)\n",
-        "            c = False\n",
-        "            break\n",
-        "        r += 5\n",
-        "        \n",
-        "    if not c:\n",
-        "        break\n",
-        "    t += 1"
+        "y = 0\n",
+        "while True:\n",
+        "    y += d\n",
+        "    if t[y]:\n",
+        "        print(y)\n",
+        "        break"
       ],
       "metadata": {
         "id": "VwTaSQW5mwGD",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0c0caef9-c461-4762-fd06-b905bd6d177a"
+        "outputId": "35fc350b-7d65-4aca-b7ae-7ff1da5be12b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "2 5 10\n"
+            "10 10 9\n",
+            "27\n"
           ]
         }
       ]
@@ -8226,13 +8222,26 @@
         "id": "7RWTIiPXmwI2"
       },
       "source": [
-        "#### "
+        "####  1247번"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import sys\n",
+        "for _ in range(3):\n",
+        "    n = int(sys.stdin.readline())\n",
+        "    s = 0\n",
+        "    for _ in range(n):\n",
+        "        t = int(sys.stdin.readline())\n",
+        "        s += t\n",
+        "    \n",
+        "    if s == 0:\n",
+        "        print(0)\n",
+        "    elif s < 0:\n",
+        "        print('-')\n",
+        "    else:\n",
+        "        print('+')"
       ],
       "metadata": {
         "id": "x-kwRCDdmwI2"
@@ -8256,25 +8265,10 @@
         "a[0] % 4 == 0 and a[0] % 400 == 0 and a[0] % 100 != 0"
       ],
       "metadata": {
-        "id": "Muuu4BgrmwLj",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e054e93c-a1f3-409c-fedc-3a5edff197f4"
+        "id": "Muuu4BgrmwLj"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
