Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -136,7 +136,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyNYNq3OGibJ7Cs/JDs0/xgt",
+      "authorship_tag": "ABX9TyOS/52taCf9aeZs1VGSL+wQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8255,14 +8255,16 @@
         "id": "RsNw0SxrmwLi"
       },
       "source": [
-        "#### "
+        "####  1402번"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "a = [2008]\n",
-        "a[0] % 4 == 0 and a[0] % 400 == 0 and a[0] % 100 != 0"
+        "n = int(input())\n",
+        "\n",
+        "for _ in range(n):\n",
+        "    print('yes') # 단순 수학 문제"
       ],
       "metadata": {
         "id": "Muuu4BgrmwLj"
