Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -136,7 +136,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyOS/52taCf9aeZs1VGSL+wQ",
+      "authorship_tag": "ABX9TyNcKcVQ/V59W3bqqxdovyvj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7136,8 +7136,19 @@
         "id": "rh9vFZIYBfGW"
       },
       "source": [
-        "#### "
+        "####  11049번"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t = [1,2,3,4,5]\n"
+      ],
+      "metadata": {
+        "id": "AK--nn72vnvJ"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -7145,7 +7156,25 @@
         "id": "c_cu5uUnBfGX"
       },
       "source": [
-        ""
+        "k = int(input())\n",
+        "\n",
+        "l = list(map(int, input().split()))\n",
+        "for _ in range(k-1):\n",
+        "    l.append(list(map(int, input().split()))[1] )\n",
+        "\n",
+        "\n",
+        "dp = [[False] * (k+1) for _ in range(k+1)]\n",
+        "    \n",
+        "for j in range(1,k):\n",
+        "    for i in range(j-1,-1,-1):\n",
+        "        small = float('inf')\n",
+        "        for q in range(j-i):\n",
+        "            small = min(small, dp[i][i+q] * dp[i+q+1][j])\n",
+        "        dp[i][j] = small * (l[j+1] / l[i])\n",
+        "\n",
+        "print(dp[0][k-1])\n",
+        "for i in dp:\n",
+        "    print(i)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -8278,6 +8307,36 @@
         "id": "R8LKjl8NmwON"
       },
       "source": [
+        "####   1681번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n, l = map(int, input().split())\n",
+        "\n",
+        "l = str(l)\n",
+        "t = []\n",
+        "x = 0\n",
+        "while len(t) != n:\n",
+        "    x += 1\n",
+        "    if l not in str(x):\n",
+        "        t.append(x)\n",
+        "        \n",
+        "print(t[-1])"
+      ],
+      "metadata": {
+        "id": "J6_Ha7IcmwOS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P3xQwj6O0mzQ"
+      },
+      "source": [
         "#### "
       ]
     },
@@ -8287,7 +8346,47 @@
         ""
       ],
       "metadata": {
-        "id": "J6_Ha7IcmwOS"
+        "id": "KBMVCjde0mzQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h2Bv5m130m2M"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "CDdtYQpd0m2M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FfeyDe_X0m5D"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "s_0AmcXo0m5E"
       },
       "execution_count": null,
       "outputs": []
