--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -124,7 +124,6 @@
         "C8-hqFACoskw",
         "bSoeQuPDosn7",
         "35U4FrTeosqy",
-        "PkFTWJFFBZxw",
         "z02YtuKLBZ4I",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
@@ -136,7 +135,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyNcKcVQ/V59W3bqqxdovyvj",
+      "authorship_tag": "ABX9TyPCBTdG2i9LYXDmuKqQbErL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7285,7 +7284,7 @@
         "id": "PkFTWJFFBZxw"
       },
       "source": [
-        "### 단계 : ===========**"
+        "### 24단계 : DFS와 BFS===========**"
       ]
     },
     {
@@ -7294,18 +7293,108 @@
         "id": "TnrDs0kMBZxw"
       },
       "source": [
-        "#### "
+        "####  1260번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VdZ0HlHIBZxx"
+        "id": "VdZ0HlHIBZxx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6add1b36-0a55-4849-ca96-e61940f90146"
       },
       "source": [
-        ""
+        "n, m, v = map(int, input().split())\n",
+        "\n",
+        "dfs_vertex = [True] + [False] * n\n",
+        "bfs_vertex = [True] + [False] * n\n",
+        "\n",
+        "dfs_result = []\n",
+        "bfs_result = []\n",
+        "\n",
+        "node = [[] for _ in range(10001)]\n",
+        "\n",
+        "for _ in range(m):\n",
+        "    a, b = map(int, input().split())\n",
+        "    node[a].append(b)\n",
+        "    node[b].append(a)\n",
+        "\n",
+        "for i in range(m):\n",
+        "    node[i].sort()\n",
+        "\n",
+        "def DFS(v): # stack형태\n",
+        "    global dfs_vertex\n",
+        "\n",
+        "    dfs_vertex[v] = True\n",
+        "    dfs_result.append(v)\n",
+        "\n",
+        "    if dfs_vertex == [True] * (n + 1):\n",
+        "        return\n",
+        "    \n",
+        "    for i in node[v]:\n",
+        "        if dfs_vertex[i]:\n",
+        "            continue\n",
+        "        else:\n",
+        "            DFS(i) \n",
+        "\n",
+        "\n",
+        "\n",
+        "def BFS(queue, v): # queue 형태\n",
+        "    global bfs_vertex\n",
+        "    \n",
+        "    queue.append(v)\n",
+        "    bfs_result.append(v)\n",
+        "    bfs_vertex[v] = True\n",
+        "\n",
+        "    while True:\n",
+        "        if queue == []:\n",
+        "            break\n",
+        "        \n",
+        "        t = queue.pop(0)\n",
+        "        for i in node[t]:\n",
+        "            if not bfs_vertex[i]:\n",
+        "                queue.append(i)\n",
+        "                bfs_result.append(i)\n",
+        "                bfs_vertex[i] = True    \n",
+        "\n",
+        "DFS(v)\n",
+        "BFS([],v)\n",
+        "\n",
+        "print(*dfs_result)\n",
+        "print(*bfs_result)"
       ],
-      "execution_count": null,
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 6 1\n",
+            "1 3\n",
+            "1 5\n",
+            "3 5\n",
+            "3 4\n",
+            "3 2\n",
+            "2 4\n",
+            "1 3 2 4 5\n",
+            "1 3 5 2 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t = [[],[]]\n",
+        "for i in range(2):\n",
+        "    t[i].sort()"
+      ],
+      "metadata": {
+        "id": "a3OMJsPJlCpE"
+      },
+      "execution_count": 20,
       "outputs": []
     },
     {
