--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -135,7 +135,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyPCBTdG2i9LYXDmuKqQbErL",
+      "authorship_tag": "ABX9TyPR/dTl+bBpZJjm0/eb5XOc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7299,11 +7299,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VdZ0HlHIBZxx",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6add1b36-0a55-4849-ca96-e61940f90146"
+        "id": "VdZ0HlHIBZxx"
       },
       "source": [
         "n, m, v = map(int, input().split())\n",
@@ -7365,36 +7361,118 @@
         "print(*dfs_result)\n",
         "print(*bfs_result)"
       ],
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "5 6 1\n",
-            "1 3\n",
-            "1 5\n",
-            "3 5\n",
-            "3 4\n",
-            "3 2\n",
-            "2 4\n",
-            "1 3 2 4 5\n",
-            "1 3 5 2 4\n"
-          ]
-        }
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Xc2rVYZ1DWAq"
+      },
+      "source": [
+        "####  2606번"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "t = [[],[]]\n",
-        "for i in range(2):\n",
-        "    t[i].sort()"
-      ],
       "metadata": {
-        "id": "a3OMJsPJlCpE"
+        "id": "NcsffSumDWAy"
       },
-      "execution_count": 20,
+      "source": [
+        "n = int(input())\n",
+        "c = int(input())\n",
+        "\n",
+        "node = [[] for _ in range(n+1)]\n",
+        "\n",
+        "for _ in range(c):\n",
+        "    a, b = map(int, input().split())\n",
+        "    node[a].append(b)\n",
+        "    node[b].append(a)\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_jfJBLzSDWEK"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2423R-7gDWEK"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oPD8cNOfDWHz"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EDNpnlLkDWH3"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gtmge-G6DWK4"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7FSKT5VZDWK4"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fK1tsdEkDWNs"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Uw2SWryEDWNt"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8426,19 +8504,34 @@
         "id": "P3xQwj6O0mzQ"
       },
       "source": [
-        "#### "
+        "####   1373번"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "t = '0b' + input()\n",
+        "t = int(t, 2)\n",
+        "print(oct(t)[2:])"
       ],
       "metadata": {
-        "id": "KBMVCjde0mzQ"
+        "id": "KBMVCjde0mzQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "585a52d3-64ea-47a7-b8cc-f1abea22419d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "11001100\n",
+            "314\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -8452,7 +8545,7 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "o"
       ],
       "metadata": {
         "id": "CDdtYQpd0m2M"
