Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -135,7 +135,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyPR/dTl+bBpZJjm0/eb5XOc",
+      "authorship_tag": "ABX9TyMqbwx1qxXh8XesNu/Vrtmt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7401,7 +7401,7 @@
         "id": "_jfJBLzSDWEK"
       },
       "source": [
-        "#### "
+        "####  1672번"
       ]
     },
     {
@@ -7410,7 +7410,24 @@
         "id": "2423R-7gDWEK"
       },
       "source": [
-        ""
+        "m = [['A','C','A','G'],\n",
+        "     ['C','G','T','A'],\n",
+        "     ['A','T','C','G'],\n",
+        "     ['G','A','G','T']]\n",
+        "\n",
+        "m_list = {'A':0,'G':1,'C':2,'T':3}\n",
+        "\n",
+        "n = int(input())\n",
+        "\n",
+        "t = input()\n",
+        "res = t[-1]\n",
+        "\n",
+        "for k in range(-2,-n-1,-1):\n",
+        "    i = m_list[t[k]]\n",
+        "    j = m_list[res]\n",
+        "    res = m[i][j]\n",
+        "\n",
+        "print(res)"
       ],
       "execution_count": null,
       "outputs": []
@@ -8521,7 +8538,7 @@
         },
         "outputId": "585a52d3-64ea-47a7-b8cc-f1abea22419d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
