Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -135,7 +135,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyMqbwx1qxXh8XesNu/Vrtmt",
+      "authorship_tag": "ABX9TyMU9lbj3hFt1RmhptB4NrQk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7140,17 +7140,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "t = [1,2,3,4,5]\n"
-      ],
-      "metadata": {
-        "id": "AK--nn72vnvJ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "metadata": {
         "id": "c_cu5uUnBfGX"
       },
@@ -7865,29 +7854,34 @@
         "id": "EQipU5hsuEff"
       },
       "source": [
-        "f = [0] * (10**6)\n",
-        "f[1] = 1 #1\n",
-        "f[2] = 3 #2\n",
-        "f[3] = 5 #3\n",
+        "# 모든 k에 대해 f(k)번 등장하는 단조 증가 수열\n",
+        "# => k    : 1 2 3 4 5 6 7 8 ~\n",
+        "# => f(k) : 1 2 2 3 3 4 4 4 ~\n",
+        "# => f(k) 는 단조 증가 수열\n",
         "\n",
-        "re = 1\n",
-        "for i in range(4,10**6):\n",
-        "    x = 0\n",
-        "    for j in range(re,i):\n",
-        "        if f[j] < i:\n",
+        "t = [0] * (10**6) # 10**6 크기의 빈 리스트 생성 => t( f(k) ) = k의 형식\n",
+        "# [0, 1, 3, 5, 8, 11, 15, 19, 23, 28, 33, 38, 44, 50, 56, 62, 69, 76, 83, 90, ...\n",
+        "\n",
+        "t[1] = 1 # 첫번째 항 \n",
+        "t[2] = 3 # 두번째 항 k가 3보다 작거나 같으면 값이 2\n",
+        "t[3] = 5 # 세번째 항 k가 5보다 작거나 같으면 값이 3\n",
+        "\n",
+        "re = 1 # 증가 갯수 저장 변수\n",
+        "for i in range(4,10**6): # 리스트 4번째 항부터 시작\n",
+        "    for j in range(re,i): # 증가하는 크기부터\n",
+        "        if t[j] < i: # f(k)보다 k가 작으면\n",
         "            continue\n",
         "        else:        \n",
-        "            x = j\n",
-        "            re = x\n",
+        "            re = j # 증가하는 값에  f(k) 값 입력\n",
         "            break\n",
-        "    f[i] = f[i-1] + x\n",
         "\n",
+        "    t[i] = t[i-1] + re # i번째에 i-1번째 값 + 증가 숫자 입력\n",
         "\n",
-        "n = int(input())\n",
+        "n = int(input()) # n값 입력\n",
         "\t\t\n",
-        "for j in range(1,10**6):\n",
-        "    if f[j] >= n:\n",
-        "        print(j)\n",
+        "for j in range(1,10**6): # 리스트 크기 만큼 반복\n",
+        "    if t[j] >= n: # t[j]의 값 즉, k값보다 n값이 작거나 같으면\n",
+        "        print(j) # f(k) 출력\n",
         "        break\n",
         "    else:\n",
         "        continue"
@@ -8075,14 +8069,14 @@
         "       'blue' : [6,1000000],\n",
         "       'violet' : [7,10000000],\n",
         "       'grey' : [8,100000000],\n",
-        "       'white' : [9,1000000000]}\n",
+        "       'white' : [9,1000000000]} # dictionary 형태로 색상값 저장 log(1)\n",
         "\n",
-        "res = 0\n",
+        "res = 0 # 결과 변수 생성\n",
         "\n",
-        "res += dic[input()][0] * 10\n",
-        "res += dic[input()][0]\n",
-        "res *= dic[input()][1]\n",
-        "print(res)"
+        "res += dic[input()][0] * 10 # 입력된 값의 십의 자릿수 \n",
+        "res += dic[input()][0] # 입력된 값의 일의 자릿수\n",
+        "res *= dic[input()][1] # 입력된 값의 10 거듭제곱\n",
+        "print(res) # 결과 출력"
       ],
       "execution_count": null,
       "outputs": []
@@ -8216,7 +8210,7 @@
         "id": "0Bb39HSWnF7J"
       },
       "source": [
-        "n = int(input())\n",
+        "n = int(input()) # \n",
         "res = {}\n",
         "for _ in range(n):\n",
         "    t = input()\n",
@@ -8256,26 +8250,26 @@
         "id": "MZ_26Hxazb1O"
       },
       "source": [
-        "a, b, c = map(int, input().split())\n",
+        "a, b, c = map(int, input().split()) # 각 변수 입력\n",
         "\n",
-        "res = {}\n",
-        "for i in range(1,a+1):\n",
-        "    for j in range(1, b+1):\n",
-        "        for k in range(1,c+1):\n",
-        "            t = i+j+k\n",
+        "res = {} # 주사위의 빈도를 담을 dict\n",
+        "for i in range(1,a+1): # a번 반복\n",
+        "    for j in range(1, b+1): # b번 반복\n",
+        "        for k in range(1,c+1): # c번 반복\n",
+        "            t = i+j+k # 세 주사위의 합 계산\n",
         "            #print(t)\n",
-        "            if t in res:\n",
-        "                res[t] += 1\n",
-        "            else:\n",
-        "                res[t] = 1\n",
+        "            if t in res: # 세 주사위의 합이 dict에 저장이 되어있으면\n",
+        "                res[t] += 1 # + 1\n",
+        "            else: # 저장이 안되어 있으면\n",
+        "                res[t] = 1 # 1로 생성\n",
         "\n",
-        "result = []\n",
-        "for k, v in res.items():\n",
-        "    if v == max(res.values()):\n",
-        "        result.append(k)\n",
+        "result = [] # 결과\n",
+        "for k, v in res.items(): # key, value : 세주사위의 합, 빈도수의 형태로 unzip\n",
+        "    if v == max(res.values()): # 빈도 값이 최대 빈도라면\n",
+        "        result.append(k) # 결과 리스트에 추가\n",
         "\n",
-        "result.sort()\n",
-        "print(result[0])"
+        "result.sort() # 결과 리스트 정렬\n",
+        "print(result[0]) # 제일 높은 빈도수가 나오는 제일 작은 세 주사위의 합 출력"
       ],
       "execution_count": null,
       "outputs": []
@@ -8295,10 +8289,10 @@
         "id": "8Viiv5quzb5D"
       },
       "source": [
-        "t = '0O' + input()\n",
+        "t = '0O' + input() # 8진수 입력\n",
         "\n",
-        "t = int(t, 8)\n",
-        "print(bin(t)[2:])"
+        "t = int(t, 8) # 8진수를 10진수로 변환\n",
+        "print(bin(t)[2:]) # 10진수를 2진수로 변환후 출력"
       ],
       "execution_count": null,
       "outputs": []
@@ -8315,11 +8309,11 @@
     {
       "cell_type": "code",
       "source": [
-        "a, b = input().split()\n",
+        "a, b = input().split() # a,b 변수 입력\n",
         "\n",
-        "a = '+'.join(a)\n",
-        "b = '+'.join(b)\n",
-        "print(eval('(' + a + ')*(' + b +')'))"
+        "a = '+'.join(a) # a의 각 자릿수의 합 문자열로 변환\n",
+        "b = '+'.join(b) # b의 각 자릿수의 합 문자열로 변환\n",
+        "print(eval('(' + a + ')*(' + b +')')) # a의 각 자릿수 합과 b의 각 자릿수 합 곱셈 계산"
       ],
       "metadata": {
         "colab": {
@@ -8352,30 +8346,32 @@
     {
       "cell_type": "code",
       "source": [
-        "a = list(map(int, input().split()))\n",
-        "b = list(map(int, input().split()))\n",
         "#윤년 2/29일 추가로 366일\n",
         "# 각 월별 마지막 날 31 28/29 31 30 31 30 31 31 30 31 30 31\n",
-        "x = [[31,28,31,30,31,30,31,31,30,31,30,31,0],\n",
-        "     [31,29,31,30,31,30,31,31,30,31,30,31,0]]\n",
         "\n",
-        "if a[0] % 4 == 0 and (a[0] % 100 != 0 or a[0] % 400 == 0):\n",
+        "a = list(map(int, input().split())) # a 일자 입력\n",
+        "b = list(map(int, input().split())) # b 일자 입력\n",
+        "\n",
+        "x = [[31,28,31,30,31,30,31,31,30,31,30,31,0], # 평년인 월의 일수\n",
+        "     [31,29,31,30,31,30,31,31,30,31,30,31,0]] # 윤년인 월의 일수\n",
+        "\n",
+        "if a[0] % 4 == 0 and (a[0] % 100 != 0 or a[0] % 400 == 0): # a의 일자가 윤년이면\n",
         "    a_res = (a[0]-1) * 365 + (((a[0]-1) // 4) + ((a[0]-1) // 400) - ((a[0]-1) // 100)) + sum(x[1][:a[1]-1])+ a[2]\n",
-        "else:\n",
+        "else: # a의 일자가 평년이면\n",
         "    a_res = (a[0]-1) * 365 + (((a[0]-1) // 4) + ((a[0]-1) // 400) - ((a[0]-1) // 100)) + sum(x[0][:a[1]-1])+ a[2]\n",
         "\n",
         "\n",
-        "if b[0] % 4 == 0 and (b[0] % 100 != 0 or b[0] % 400 == 0):\n",
+        "if b[0] % 4 == 0 and (b[0] % 100 != 0 or b[0] % 400 == 0): # b의 일자가 윤년이면\n",
         "    b_res = (b[0]-1) * 365 + (((b[0]-1) // 4) + ((b[0]-1) // 400) - ((b[0]-1) // 100)) + sum(x[1][:b[1]-1])+ b[2]\n",
-        "else:\n",
+        "else: # b의 일자가 평년이면\n",
         "    b_res = (b[0]-1) * 365 + (((b[0]-1) // 4) + ((b[0]-1) // 400) - ((b[0]-1) // 100)) + sum(x[0][:b[1]-1])+ b[2]\n",
         "\n",
-        "t = b_res - a_res\n",
-        "#print(b_res, a_res)\n",
-        "if a[0] + 1000 <= b[0] and a[1] <= b[1] and a[2] <= b[2]:\n",
-        "    print('gg')\n",
+        "t = b_res - a_res # d-day 계산\n",
+        "\n",
+        "if a[0] + 1000 <= b[0] and a[1] <= b[1] and a[2] <= b[2]: # 1000년 m월 d일과 같거나 늦다면\n",
+        "    print('gg') \n",
         "else:\n",
-        "    print('D-{0}'.format(t))"
+        "    print('D-{0}'.format(t)) # d-day 출력"
       ],
       "metadata": {
         "id": "lXfdrFFrmtr1"
@@ -8395,18 +8391,18 @@
     {
       "cell_type": "code",
       "source": [
-        "n, l, d = map(int, input().split())\n",
+        "n, l, d = map(int, input().split()) # 각 변수 입력\n",
         "\n",
-        "t = [True] * 5000\n",
+        "t = [True] * 5000 # 5000크기의 리스트 생성\n",
         "x = 0\n",
-        "for _ in range(n):\n",
-        "    t[x:x+l] = [False] * l # 노래가 나오는 타임\n",
-        "    x += l + 5\n",
+        "for _ in range(n): \n",
+        "    t[x:x+l] = [False] * l # 노래가 나오는 타임은 False로 입력\n",
+        "    x += l + 5 # 노래가 나오지 않는 시간은 True로 입력\n",
         "    \n",
         "y = 0\n",
         "while True:\n",
-        "    y += d\n",
-        "    if t[y]:\n",
+        "    y += d # d초의 간격으로 \n",
+        "    if t[y]: # y초에서 노래가 나오지 않는 시간이면\n",
         "        print(y)\n",
         "        break"
       ],
@@ -8442,18 +8438,18 @@
       "cell_type": "code",
       "source": [
         "import sys\n",
-        "for _ in range(3):\n",
+        "for _ in range(3): # 3번 반복\n",
         "    n = int(sys.stdin.readline())\n",
-        "    s = 0\n",
-        "    for _ in range(n):\n",
+        "    s = 0 # 결과 값\n",
+        "    for _ in range(n): # n번 반복\n",
         "        t = int(sys.stdin.readline())\n",
-        "        s += t\n",
+        "        s += t # 입력된 값 s값에 추가\n",
         "    \n",
-        "    if s == 0:\n",
+        "    if s == 0: # s가 0이면\n",
         "        print(0)\n",
-        "    elif s < 0:\n",
+        "    elif s < 0: # s가 음수이면\n",
         "        print('-')\n",
-        "    else:\n",
+        "    else: # s가 양수이면\n",
         "        print('+')"
       ],
       "metadata": {
@@ -8474,7 +8470,9 @@
     {
       "cell_type": "code",
       "source": [
-        "n = int(input())\n",
+        "# 해당 답안은 모든 경우가 가능.\n",
+        "# 1 * 1 * a, 1 + 1 + a 의 형태로 모든 경우를 만들 수 있음.\n",
+        "n = int(input()) \n",
         "\n",
         "for _ in range(n):\n",
         "    print('yes') # 단순 수학 문제"
@@ -8497,17 +8495,17 @@
     {
       "cell_type": "code",
       "source": [
-        "n, l = map(int, input().split())\n",
+        "n, l = map(int, input().split()) \n",
         "\n",
-        "l = str(l)\n",
-        "t = []\n",
+        "l = str(l) # 들어가면 안되는 수 문자형 변환\n",
+        "t = [] # 라벨 list\n",
         "x = 0\n",
-        "while len(t) != n:\n",
-        "    x += 1\n",
-        "    if l not in str(x):\n",
-        "        t.append(x)\n",
+        "while len(t) != n: # 라벨 list의 길이가 n이 될 때 까지 반복\n",
+        "    x += 1 # 1씩 증가\n",
+        "    if l not in str(x): # x를 문자형으로 변환 후 들어가면 안되는 수가 없으면\n",
+        "        t.append(x) # 라벨 list 추가\n",
         "        \n",
-        "print(t[-1])"
+        "print(t[-1]) # 라벨 list 중 가장 큰 수 삽입"
       ],
       "metadata": {
         "id": "J6_Ha7IcmwOS"
@@ -8527,28 +8525,15 @@
     {
       "cell_type": "code",
       "source": [
-        "t = '0b' + input()\n",
-        "t = int(t, 2)\n",
-        "print(oct(t)[2:])"
+        "t = '0b' + input() # 이진수 형태로 입력\n",
+        "t = int(t, 2) # 2진수를 10진수로 변환\n",
+        "print(oct(t)[2:]) # 8진수 0o 제거 후 출력"
       ],
       "metadata": {
-        "id": "KBMVCjde0mzQ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "585a52d3-64ea-47a7-b8cc-f1abea22419d"
+        "id": "KBMVCjde0mzQ"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "11001100\n",
-            "314\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8556,19 +8541,58 @@
         "id": "h2Bv5m130m2M"
       },
       "source": [
-        "#### "
+        "####  1703번"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "o"
+        "while True:\n",
+        "    t = list(map(int, input().split()))\n",
+        "\n",
+        "    if t == [0]:\n",
+        "        break\n",
+        "    \n",
+        "    res = 0\n",
+        "    for i in range(1,2*t[0]+1,2):\n",
+        "\n",
+        "        if i == 1:\n",
+        "            res = t[i] - t[i+1]\n",
+        "            continue\n",
+        "        \n",
+        "        else:\n",
+        "            res *= t[i]\n",
+        "            res -= t[i+1]\n",
+        "        \n",
+        "    print(res)"
       ],
       "metadata": {
-        "id": "CDdtYQpd0m2M"
+        "id": "CDdtYQpd0m2M",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "34294638-e344-4bfc-eeac-09de8e247be1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2 3 0 2 0\n",
+            "6\n",
+            "3 3 0 2 0 2 0\n",
+            "12\n",
+            "3 3 0 2 1 2 3\n",
+            "7\n",
+            "2 4 1 3 4\n",
+            "5\n",
+            "4 5 0 5 1 5 2 5 101\n",
+            "489\n",
+            "0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -8582,13 +8606,27 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "t = 2\n",
+        "if t:\n",
+        "    print('a')"
       ],
       "metadata": {
-        "id": "s_0AmcXo0m5E"
+        "id": "s_0AmcXo0m5E",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2b426658-4f8e-4a66-cd0a-c4d6980509b4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n"
+          ]
+        }
+      ]
     }
   ]
 }
