--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -33,10 +33,8 @@
         "ZZX1EwaLOoXw",
         "uwtGS2Q4Ooaz",
         "L2bGuKUUOoeb",
-        "wBFPqXNuR8ne",
         "JjxDErpjR8ne",
         "AZNtoqizpQ2e",
-        "u-5xqnR1pRSf",
         "mKjNyy4epRXc",
         "bTQh46KspRbf",
         "gZGgBEu5pRfc",
@@ -135,7 +133,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyMU9lbj3hFt1RmhptB4NrQk",
+      "authorship_tag": "ABX9TyNTolV1g3sjQ8R6CpvwKaZ5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1587,9 +1585,7 @@
         "\n",
         "  if can == 0:\n",
         "    print(n)\n",
-        "    break\n",
-        "\n",
-        "\n"
+        "    break"
       ],
       "execution_count": null,
       "outputs": []
@@ -8567,37 +8563,113 @@
         "    print(res)"
       ],
       "metadata": {
-        "id": "CDdtYQpd0m2M",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "34294638-e344-4bfc-eeac-09de8e247be1"
+        "id": "CDdtYQpd0m2M"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "2 3 0 2 0\n",
-            "6\n",
-            "3 3 0 2 0 2 0\n",
-            "12\n",
-            "3 3 0 2 1 2 3\n",
-            "7\n",
-            "2 4 1 3 4\n",
-            "5\n",
-            "4 5 0 5 1 5 2 5 101\n",
-            "489\n",
-            "0\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
         "id": "FfeyDe_X0m5D"
+      },
+      "source": [
+        "####  1652번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m = []\n",
+        "n = int(input())\n",
+        "for _ in range(n):\n",
+        "    m.append(input())\n",
+        "\n",
+        "row = 0\n",
+        "col = 0\n",
+        "for i in range(n):\n",
+        "    row_t = 0\n",
+        "    col_t = 0\n",
+        "    for j in range(n):\n",
+        "        if m[i][j] == 'X':\n",
+        "            if row_t >= 2:\n",
+        "                row += 1\n",
+        "            row_t = 0\n",
+        "        \n",
+        "        else:\n",
+        "            row_t += 1\n",
+        "    \n",
+        "    for j in range(n):\n",
+        "        if m[j][i] == 'X':\n",
+        "            if col_t >= 2:\n",
+        "                col += 1\n",
+        "            col_t = 0\n",
+        "        \n",
+        "        else:\n",
+        "            col_t += 1\n",
+        "\n",
+        "    if row_t >= 2:\n",
+        "        row += 1\n",
+        "\n",
+        "    if col_t >= 2:\n",
+        "        col += 1\n",
+        "\n",
+        "print(row, col)"
+      ],
+      "metadata": {
+        "id": "s_0AmcXo0m5E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Zj_G1Z_AOL0y"
+      },
+      "source": [
+        "####  1418번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input())\n",
+        "k = int(input())\n",
+        "\n",
+        "t_list = [True] * (n+1)\n",
+        "t_list[0] = False\n",
+        "\n",
+        "for i in range(2,int(n**0.5)+2):\n",
+        "    for j in range(i,n+1,i):\n",
+        "        if j == i:\n",
+        "            continue \n",
+        "        t_list[j] = False\n",
+        "\n",
+        "res = [[1] for i in range(n+1)]\n",
+        "\n",
+        "for i in range(2,n+1):\n",
+        "    if t_list[i]:\n",
+        "        for j in range(i,n+1,i):\n",
+        "            res[j].append(i)\n",
+        "\n",
+        "t = 0\n",
+        "for i in range(1, n+1):\n",
+        "    if res[i][-1] <= k:\n",
+        "        t += 1\n",
+        "\n",
+        "print(t)"
+      ],
+      "metadata": {
+        "id": "HzpWgvTrOL04"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bD1i4z1uOL4t"
       },
       "source": [
         "#### "
@@ -8606,27 +8678,13 @@
     {
       "cell_type": "code",
       "source": [
-        "t = 2\n",
-        "if t:\n",
-        "    print('a')"
+        ""
       ],
       "metadata": {
-        "id": "s_0AmcXo0m5E",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2b426658-4f8e-4a66-cd0a-c4d6980509b4"
+        "id": "y32-CU2JOL4t"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "a\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
