Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -133,7 +133,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyNTolV1g3sjQ8R6CpvwKaZ5",
+      "authorship_tag": "ABX9TyP0WLtVv7foS3w8yD6UNEX/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7097,7 +7097,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WET29noWBV2p"
+        "id": "WET29noWBV2p",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ac5197f8-c916-45df-863e-775ef74b5709"
       },
       "source": [
         "#O(n^3)\n",
@@ -7108,22 +7112,47 @@
         "n = int(input())\n",
         "\n",
         "for _ in range(n):\n",
-        "    k = int(sys.stdin.readline())\n",
-        "    l = list(map(int, sys.stdin.readline().rstrip('\\n').split()))\n",
+        "    k = int(input())\n",
+        "    l = list(map(int, input().split()))\n",
         "\n",
-        "    dp = [[False] * (k) for _ in range(k)]\n",
+        "    dp = [[False] * (k) for _ in range(k)] # 2차 행렬 생성\n",
         "    \n",
-        "    for j in range(1,k):\n",
+        "    for j in range(1,k): \n",
         "        for i in range(j-1,-1,-1):\n",
         "            small = float('inf')\n",
         "            for q in range(j-i):\n",
         "                small = min(small, dp[i][i+q] + dp[i+q+1][j])\n",
         "            dp[i][j] = small + sum(l[i:j+1])\n",
+        "            print('small : ',small)\n",
         "\n",
-        "    print(dp[0][k-1])"
+        "    print(dp[0][k-1])\n",
+        "    for i in dp:\n",
+        "        print(i)\n",
+        "    "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "4\n",
+            "40 30 30 50\n",
+            "small :  0\n",
+            "small :  0\n",
+            "small :  60\n",
+            "small :  0\n",
+            "small :  60\n",
+            "small :  150\n",
+            "300\n",
+            "[False, 70, 160, 300]\n",
+            "[False, False, 60, 170]\n",
+            "[False, False, False, 80]\n",
+            "[False, False, False, False]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -7137,31 +7166,60 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c_cu5uUnBfGX"
+        "id": "c_cu5uUnBfGX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "251aed64-e308-4be8-d1c1-a0278e87b5a6"
       },
       "source": [
         "k = int(input())\n",
         "\n",
         "l = list(map(int, input().split()))\n",
         "for _ in range(k-1):\n",
-        "    l.append(list(map(int, input().split()))[1] )\n",
+        "    l.append(list(map(int, input().split()))[1])\n",
         "\n",
+        "dp = [[ False] * k for _ in range(k)]\n",
+        "for i in range(k):\n",
+        "    dp[i][i] = l[i] * l[i+1]\n",
         "\n",
-        "dp = [[False] * (k+1) for _ in range(k+1)]\n",
-        "    \n",
+        "t = [1] * (k+2)\n",
+        "for i in range(1,k+2):\n",
+        "    t[i] = t[i-1] * l[i-1]\n",
+        "\n",
+        "print('t : ',t)\n",
+        "\n",
         "for j in range(1,k):\n",
         "    for i in range(j-1,-1,-1):\n",
         "        small = float('inf')\n",
         "        for q in range(j-i):\n",
-        "            small = min(small, dp[i][i+q] * dp[i+q+1][j])\n",
-        "        dp[i][j] = small * (l[j+1] / l[i])\n",
-        "\n",
+        "            small = min(small, int(dp[i][i+q] * dp[i+q+1][j] / (t[j+1] / t[i+1])))\n",
+        "        dp[i][j] = int(small )\n",
+        "#1 5 15 30 180\n",
         "print(dp[0][k-1])\n",
         "for i in dp:\n",
-        "    print(i)\n"
+        "    print(i)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "5 3\n",
+            "3 2\n",
+            "2 6\n",
+            "6 3\n",
+            "t :  [1, 5, 15, 30, 180, 540]\n",
+            "7\n",
+            "[15, 30, 60, 7]\n",
+            "[False, 6, 36, 18]\n",
+            "[False, False, 12, 36]\n",
+            "[False, False, False, 18]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -8672,6 +8730,28 @@
         "id": "bD1i4z1uOL4t"
       },
       "source": [
+        "####  1550번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t = '0x' + input()\n",
+        "t = int(t, 16)\n",
+        "print(t)"
+      ],
+      "metadata": {
+        "id": "y32-CU2JOL4t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CIsbivR4a9HU"
+      },
+      "source": [
         "#### "
       ]
     },
@@ -8681,7 +8761,27 @@
         ""
       ],
       "metadata": {
-        "id": "y32-CU2JOL4t"
+        "id": "_0LSUPuna9HU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "InPGru7oa9K7"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "yheIzxIta9K7"
       },
       "execution_count": null,
       "outputs": []
