Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -133,7 +133,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyP0WLtVv7foS3w8yD6UNEX/",
+      "authorship_tag": "ABX9TyPP9qftQ6B/Yx5ujsfwPxn6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6599,7 +6599,6 @@
         "id": "EG7quulgMA--"
       },
       "source": [
-        "\n",
         "# https://blog.naver.com/crm06217/222021716929\n",
         "# 행렬 풀이\n",
         "n = int(input())\n",
@@ -7097,11 +7096,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WET29noWBV2p",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ac5197f8-c916-45df-863e-775ef74b5709"
+        "id": "WET29noWBV2p"
       },
       "source": [
         "#O(n^3)\n",
@@ -7109,50 +7104,32 @@
         "# https://www.youtube.com/watch?v=4OdIDIYLHlY\n",
         "# 어렵다 아직 잘 모르겠음('21.12.15)\n",
         "import sys\n",
-        "n = int(input())\n",
+        "n = int(input()) # 케이스 변수 입력\n",
         "\n",
-        "for _ in range(n):\n",
-        "    k = int(input())\n",
-        "    l = list(map(int, input().split()))\n",
+        "for _ in range(n): # 케이스 수 만큼 반복\n",
+        "    k = int(sys.stdin.readline()) # 횟수 변수 입력\n",
+        "    l = list(map(int, sys.stdin.readline().rstrip('\\n').split())) # 리스트 형태로 입력\n",
         "\n",
         "    dp = [[False] * (k) for _ in range(k)] # 2차 행렬 생성\n",
         "    \n",
-        "    for j in range(1,k): \n",
-        "        for i in range(j-1,-1,-1):\n",
-        "            small = float('inf')\n",
-        "            for q in range(j-i):\n",
-        "                small = min(small, dp[i][i+q] + dp[i+q+1][j])\n",
-        "            dp[i][j] = small + sum(l[i:j+1])\n",
-        "            print('small : ',small)\n",
+        "    for j in range(1,k): # 각 열 오름차순 진행\n",
+        "        for i in range(j-1,-1,-1): # 각 행 내림차순 진행\n",
+        "            small = float('inf') # inf 값 입력\n",
+        "            for q in range(j-i): # i행의 q번째(왼쪽에서부터)\n",
+        "                                 # j열의 q+1번째(위에서부터)\n",
         "\n",
-        "    print(dp[0][k-1])\n",
-        "    for i in dp:\n",
-        "        print(i)\n",
-        "    "
+        "                small = min(small, # 이전 값\n",
+        "                            dp[i][i+q] + dp[i+q+1][j]) \n",
+        "                            # i,j 행,열 이라면,\n",
+        "                            # i행의 q번째 값과, j열의 q+1번째 값의 합\n",
+        "\n",
+        "            dp[i][j] = small + sum(l[i:j+1]) # small 값 +\n",
+        "                                             # 해당 집합의 합\n",
+        "            \n",
+        "    print(dp[0][k-1]) # 결과 값 출력"
       ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "4\n",
-            "40 30 30 50\n",
-            "small :  0\n",
-            "small :  0\n",
-            "small :  60\n",
-            "small :  0\n",
-            "small :  60\n",
-            "small :  150\n",
-            "300\n",
-            "[False, 70, 160, 300]\n",
-            "[False, False, 60, 170]\n",
-            "[False, False, False, 80]\n",
-            "[False, False, False, False]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -7166,60 +7143,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c_cu5uUnBfGX",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "251aed64-e308-4be8-d1c1-a0278e87b5a6"
+        "id": "c_cu5uUnBfGX"
       },
       "source": [
-        "k = int(input())\n",
+        "# pypy3로 진행\n",
         "\n",
-        "l = list(map(int, input().split()))\n",
-        "for _ in range(k-1):\n",
-        "    l.append(list(map(int, input().split()))[1])\n",
+        "k = int(input()) # 횟수 변수 입력\n",
         "\n",
-        "dp = [[ False] * k for _ in range(k)]\n",
-        "for i in range(k):\n",
-        "    dp[i][i] = l[i] * l[i+1]\n",
+        "l = []\n",
+        "for _ in range(k): \n",
+        "    l.append(list(map(int, input().split()))) # 리스트 형태로 추가\n",
         "\n",
-        "t = [1] * (k+2)\n",
-        "for i in range(1,k+2):\n",
-        "    t[i] = t[i-1] * l[i-1]\n",
-        "\n",
-        "print('t : ',t)\n",
-        "\n",
-        "for j in range(1,k):\n",
-        "    for i in range(j-1,-1,-1):\n",
-        "        small = float('inf')\n",
-        "        for q in range(j-i):\n",
-        "            small = min(small, int(dp[i][i+q] * dp[i+q+1][j] / (t[j+1] / t[i+1])))\n",
-        "        dp[i][j] = int(small )\n",
-        "#1 5 15 30 180\n",
-        "print(dp[0][k-1])\n",
-        "for i in dp:\n",
-        "    print(i)"
+        "dp = [[False] * k for _ in range(k)] # 2차 행렬 생성\n",
+        "for j in range(1,k): # 각 열 오름차순 진행\n",
+        "    for i in range(j-1,-1,-1): # 각 행 내림차순 진행\n",
+        "        dp[i][j] = float('inf') # inf 값 입력\n",
+        "        for q in range(j-i): # i행의 q번째(왼쪽에서부터)\n",
+        "                             # j열의 q+1번째(위에서부터)\n",
+        "        \n",
+        "            dp[i][j] = min(dp[i][j], # 이전 값\n",
+        "                           dp[i][i+q] + dp[i+q+1][j] + l[i][0] * l[i+q][1] * l[j][1])\n",
+        "                           # 이전 dp들의 합과 \n",
+        "                           # i번째 행렬의 앞부분 *\n",
+        "                           # i행의 q번째 값의 뒷부분 * \n",
+        "                           # j번째 행렬의 뒷부분\n",
+        "        \n",
+        "print(dp[0][k-1]) # 결과 출력\n",
+        "'''\n",
+        "[False,    30,    90,    96]\n",
+        "[False, False,    36,    54]\n",
+        "[False, False, False,    36]\n",
+        "[False, False, False, False]\n",
+        "'''"
       ],
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "4\n",
-            "5 3\n",
-            "3 2\n",
-            "2 6\n",
-            "6 3\n",
-            "t :  [1, 5, 15, 30, 180, 540]\n",
-            "7\n",
-            "[15, 30, 60, 7]\n",
-            "[False, 6, 36, 18]\n",
-            "[False, False, 12, 36]\n",
-            "[False, False, False, 18]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
