--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -125,6 +125,7 @@
         "bSoeQuPDosn7",
         "35U4FrTeosqy",
         "z02YtuKLBZ4I",
+        "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
         "kg3C85P2pkCh",
@@ -135,7 +136,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyPpRjv/48jZeWFpL0E9HO2U",
+      "authorship_tag": "ABX9TyPBLG7R8C/LDJghZbSpYSA9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7194,172 +7195,44 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1wrgab6JBfMe",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "1ba39fc9-f8af-4ca9-d122-b0b0b377de1f"
+        "id": "1wrgab6JBfMe"
       },
       "source": [
+        "import sys\n",
+        "# top-down 방식\n",
+        "sys.setrecursionlimit(1000000000) # 없으면 재귀 깊이 오류\n",
         "n, m = map(int, input().split())                        # 행과 열의 개수 입력\n",
         "\n",
         "l = []                                          # 지도 리스트 생성\n",
         "for _ in range(n):                              # 행만큼 반복\n",
         "    l.append(list(map(int, input().split())))   # 지도 입력\n",
         "\n",
-        "t = 0\n",
-        "a = [[True] * m for _ in range(n)]\n",
-        "\n",
-        "a[0][0] = False # 막힘\n",
+        "res = [[-1] * m for _ in range(n)]\n",
+        "res[-1][-1] = 1\n",
         "\n",
         "def can(i,j):\n",
-        "    if i < 0 or j < 0 or i >= n or j >= m or (not a[i][j]):\n",
+        "    if i < 0 or j < 0 or i >= n or j >= m:\n",
         "        return False\n",
         "    else:\n",
         "        return True\n",
         "\n",
         "def find(i,j):\n",
-        "    if i == n-1 and j == m-1:\n",
-        "        t += 1\n",
-        "        return\n",
+        "    if res[i][j] != -1:\n",
+        "        return res[i][j]\n",
         "\n",
-        "    a[i][j] = False\n",
-        "    for k in res:\n",
-        "        print(k)\n",
-        "    print()\n",
-        "    if can(i+1,j): # 하\n",
-        "        if l[i][j] > l[i+1][j]:                \n",
-        "            find(i+1,j)\n",
-        "        else:\n",
-        "            pass\n",
+        "    res[i][j] = 0\n",
         "\n",
-        "    if can(i,j+1): # 좌\n",
-        "        if l[i][j] > l[i][j+1]:\n",
-        "            find(i,j+1)\n",
-        "        else:\n",
-        "            pass\n",
+        "    for x, y in[(0,1),(1,0),(0,-1),(-1,0)]:\n",
+        "        if can(i+x,j+y): \n",
+        "            if l[i][j] > l[i+x][j+y]:                \n",
+        "                res[i][j] += find(i+x, j+y)\n",
         "\n",
-        "    if can(i,j-1): # 우\n",
-        "        if l[i][j] > l[i][j-1]:\n",
-        "            find(i,j-1)\n",
-        "        else:\n",
-        "            pass\n",
+        "    return res[i][j]\n",
         "\n",
-        "    a[i][j] = True\n",
-        "    \n",
-        "\n",
-        "find(0,0)\n",
-        "for i in res:\n",
-        "    print(i)"
+        "print(find(0,0))"
       ],
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "4 5\n",
-            "50 45 37 32 30\n",
-            "35 50 40 20 25\n",
-            "30 30 25 17 28\n",
-            "27 24 22 15 10\n",
-            "[1, False, False, False, False]\n",
-            "[False, False, False, False, False]\n",
-            "[False, False, False, False, False]\n",
-            "[False, False, False, False, False]\n",
-            "\n",
-            "[1, False, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[False, False, False, False, False]\n",
-            "[False, False, False, False, False]\n",
-            "\n",
-            "[1, False, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[False, False, False, False, False]\n",
-            "\n",
-            "[1, False, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "\n",
-            "[1, False, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, 1, False, False, False]\n",
-            "\n",
-            "[1, False, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, 1, 1, False, False]\n",
-            "\n",
-            "[1, False, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, 1, 1, 1, False]\n",
-            "\n",
-            "[1, 1, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, 1, 1, 1, 1]\n",
-            "\n",
-            "[1, 1, 1, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, 1, 1, 1, 1]\n",
-            "\n",
-            "[1, 1, 1, 1, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, 1, 1, 1, 1]\n",
-            "\n",
-            "[1, 1, 1, 1, False]\n",
-            "[1, False, False, 1, False]\n",
-            "[1, False, False, False, False]\n",
-            "[1, 1, 1, 1, 1]\n",
-            "\n",
-            "[1, 1, 1, 1, False]\n",
-            "[1, False, False, 1, False]\n",
-            "[1, False, False, 1, False]\n",
-            "[1, 1, 1, 1, 1]\n",
-            "\n",
-            "[1, 1, 1, 1, False]\n",
-            "[1, False, False, 1, False]\n",
-            "[1, False, False, 1, False]\n",
-            "[1, 1, 1, 2, 1]\n",
-            "\n",
-            "[1, 1, 1, 1, 1]\n",
-            "[1, False, False, 1, False]\n",
-            "[1, False, False, 1, False]\n",
-            "[1, 1, 1, 2, 3]\n",
-            "\n",
-            "[1, 1, 1, 1, 1]\n",
-            "[1, False, False, 1, 1]\n",
-            "[1, False, False, 1, False]\n",
-            "[1, 1, 1, 2, 3]\n",
-            "\n",
-            "[1, 1, 1, 1, 1]\n",
-            "[1, False, False, 2, 1]\n",
-            "[1, False, False, 1, False]\n",
-            "[1, 1, 1, 2, 3]\n",
-            "\n",
-            "[1, 1, 1, 1, 1]\n",
-            "[1, False, False, 2, 1]\n",
-            "[1, False, False, 3, False]\n",
-            "[1, 1, 1, 2, 3]\n",
-            "\n",
-            "[1, 1, 1, 1, 1]\n",
-            "[1, False, False, 2, 1]\n",
-            "[1, False, False, 3, False]\n",
-            "[1, 1, 1, 5, 3]\n",
-            "\n",
-            "[1, 1, 1, 1, 1]\n",
-            "[1, False, False, 2, 1]\n",
-            "[1, False, False, 3, False]\n",
-            "[1, 1, 1, 5, 8]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -7367,7 +7240,7 @@
         "id": "ZZhvFpbMBfQ5"
       },
       "source": [
-        "#### "
+        "#### 10942번"
       ]
     },
     {
@@ -7376,13 +7249,7 @@
         "id": "6aZjr4sfBfQ5"
       },
       "source": [
-        "'''\n",
-        "4 5\n",
-        "50 45 37 32 30\n",
-        "35 50 40 20 25\n",
-        "30 30 25 17 28\n",
-        "27 24 22 15 10\n",
-        "'''"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -7399,28 +7266,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EqURMFb1BfVK",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "424de1dc-8e44-4b31-bd41-706e6f90d8e8"
+        "id": "EqURMFb1BfVK"
       },
       "source": [
-        "True or False"
+        ""
       ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8206,38 +8058,68 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MJyM9C81Rtfa"
+        "id": "MJyM9C81Rtfa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5f50a5bc-ae8a-4f1a-8b40-3da85d7c4520"
       },
       "source": [
+        "### 이해는 되도 시원하게 해결은 아직 안됨.\n",
         "import sys\n",
         "\n",
-        "def find(sticks, kits):                                 # \n",
+        "def find(sticks, kits):                                 # find 함수 정의\n",
         "    sticks.sort(reverse=True)                           # 젓가락 내림차순 정렬\n",
         "\n",
-        "    bad = [0 for _ in range(len(sticks) + 3)]           #\n",
-        "    for i in range(1, len(sticks)):                     #\n",
-        "        bad[i+1] = (sticks[i-1] - sticks[i]) ** 2       #\n",
+        "    bad = [0 for _ in range(len(sticks) + 3)]           # \n",
+        "    for i in range(1, len(sticks)):                     # 젓가락 개수 만큼 반복\n",
+        "        bad[i+1] = (sticks[i-1] - sticks[i]) ** 2       # 젓가락 차의 제곱 입력\n",
+        "    print('bad : ', bad)\n",
+        "    prev = [0 for _ in range(len(sticks) + 1)]          # 이전 dp\n",
+        "    current = [-1 for _ in range(len(sticks) + 1)]      # 현재 dp\n",
         "\n",
-        "    prev = [0 for _ in range(len(sticks) + 1)]          # 이전 \n",
-        "    current = [-1 for _ in range(len(sticks) + 1)]      #\n",
+        "    for k in range(1, kits + 1):                        # k명의 사람 수 만큼 반복\n",
+        "        current[3 * k - 1] = float('inf')               # 3*k-1번 째 칸 inf 초기화\n",
+        "        for s in range(3 * k, len(sticks) - abs(k - kits) * 2 + 1): # k*3 번째 부터 뒤에 kits-k개의 짝이 있어야 하기에\n",
+        "                                                                    # 젓가락 개수 - 남은 짝의 개수 * 2 까지\n",
         "\n",
-        "    for k in range(1, kits + 1):                        #\n",
-        "        current[3 * k - 1] = float('inf')               #\n",
-        "        for s in range(3 * k, len(sticks) - abs(k - kits) * 2 + 1): #\n",
-        "            if current[s-1] > prev[s-2] + bad[s]:       #\n",
-        "                current[s] = prev[s-2] + bad[s]         #\n",
-        "            else:                                       #\n",
-        "                current[s] = current[s-1]               #\n",
-        "        prev, current = current, prev                   #\n",
-        "    return prev[len(sticks)]                            #\n",
+        "            if current[s-1] > prev[s-2] + bad[s]:       # current의 이전 값이 prev의 2칸전과 s번째 차이의 곱보다 크면\n",
+        "                current[s] = prev[s-2] + bad[s]         # current 최소 값 업데이트\n",
+        "            else:                                       # 아니라면\n",
+        "                current[s] = current[s-1]               # 기존 값 업데이트\n",
+        "        #print('prev : ',prev)\n",
+        "        #print('current : ',current)\n",
+        "        prev, current = current, prev                   # prev와 current dp 교환\n",
+        "    return prev[len(sticks)]                            # prev 마지막 값 출력\n",
         "\n",
         "\n",
         "K, N = map(int, input().split())                        # 두 정수 입력\n",
-        "chops = [int(sys.stdin.readline()) for _ in range(N)]   # 젓가락 길이 리스트에 입력\n",
-        "print(find(chops, K))                                   # "
+        "chops = list(map(int, input().split()))   # 젓가락 길이 리스트에 입력\n",
+        "print(find(chops, K))                                   # 함수 실행\n",
+        "\n",
+        "# 1 2 5 9 14 20 21 24 28\n",
+        "\n",
+        "#  a  b  c  d  e f g h i\n",
+        "# 28 24 21 20 14 9 5 2 1\n",
+        "#k번째 짝에서 a가 가장 높은 수 "
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 9\n",
+            "1 2 5 9 14 20 21 24 28\n",
+            "bad :  [0, 0, 16, 9, 1, 36, 25, 16, 9, 1, 0, 0]\n",
+            "prev :  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "current :  [-1, -1, inf, 9, 1, 1, 1, 1, -1, -1]\n",
+            "prev :  [-1, -1, inf, 9, 1, 1, 1, 1, -1, -1]\n",
+            "current :  [0, 0, 0, 0, 0, inf, 26, 17, 10, 2]\n",
+            "2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
